backend/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexgen-imatch-api
spec:
  selector:
    app: nexgen-imatch-api
  ports:
    - port: 8443
      targetPort: 8443
  type: ClusterIP
